# lucy_api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_xenon.sh
lucy/: __init__.py
lucy/application/: repositories.py
lucy/application/services/: file_service.py
lucy/application/use_case/: brand_provider_use_case.py
lucy/application/use_case/brand/: create_brand.py  get_amount_use_case.py
lucy/application/use_case/category/: category_use_case.py  create_category.py  get_amount_use_case.py
lucy/application/use_case/comment/: comment_use_case.py
lucy/application/use_case/product/: create_product.py  get_amount_use_case.py  product_use_case.py
lucy/application/use_case/provider/: create_provider.py  get_amount_use_case.py  provider_use_case.py
lucy/application/use_case/santitary_registry/: create_sanitary_registry.py  get_amount_use_case.py  sanitary_registry_use_case.py
lucy/core/: utils.py
lucy/domain/models/: __init__.py  brand.py  brand_provider.py  category.py  characteristic.py  comments.py  file.py  observation.py  product.py  provider.py  sanitary_registry.py  technical_sheets.py
lucy/infrastructure/: __init__.py
lucy/infrastructure/api/: main.py
lucy/infrastructure/repositories/pg_repositories/: pg_brand_provider_repository.py  pg_brand_repository.py  pg_category_repository.py  pg_characteristic_repository.py  pg_comment_repository.py  pg_observation_repository.py  pg_pool.py  pg_product_repository.py  pg_provider_repository.py  pg_sanitary_registry_repository.py  (+1 more)
lucy/settings/: __init__.py
(+6 files in other folders)
